@@ -23,10 +23,8 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.api.Api;
 import org.apache.solr.api.ApiBag;
@@ -36,14 +34,12 @@ import org.apache.solr.common.util.CommandOperation;
 import org.apache.solr.common.util.ContentStreamBase;
 import org.apache.solr.handler.RequestHandlerBase;
 import org.apache.solr.handler.admin.CoreAdminHandler;
-import org.apache.solr.handler.admin.HealthCheckHandler;
 import org.apache.solr.handler.admin.InfoHandler;
 import org.apache.solr.handler.admin.LoggingHandler;
 import org.apache.solr.handler.admin.PropertiesRequestHandler;
-import org.apache.solr.handler.admin.SystemInfoHandler;
 import org.apache.solr.handler.admin.ThreadDumpHandler;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.response.SolrQueryResponse;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -56,10 +52,8 @@ public class V2NodeAPIMappingTest extends SolrTestCaseJ4 {
   private ArgumentCaptor<SolrQueryRequest> queryRequestCaptor;
   private CoreAdminHandler mockCoresHandler;
   private InfoHandler infoHandler;
-  private SystemInfoHandler mockSystemInfoHandler;
   private LoggingHandler mockLoggingHandler;
   private PropertiesRequestHandler mockPropertiesHandler;
-  private HealthCheckHandler mockHealthCheckHandler;
   private ThreadDumpHandler mockThreadDumpHandler;
 
   @BeforeClass
@@ -71,17 +65,13 @@ public class V2NodeAPIMappingTest extends SolrTestCaseJ4 {
   public void setupApiBag() {
     mockCoresHandler = mock(CoreAdminHandler.class);
     infoHandler = mock(InfoHandler.class);
-    mockSystemInfoHandler = mock(SystemInfoHandler.class);
     mockLoggingHandler = mock(LoggingHandler.class);
     mockPropertiesHandler = mock(PropertiesRequestHandler.class);
-    mockHealthCheckHandler = mock(HealthCheckHandler.class);
     mockThreadDumpHandler = mock(ThreadDumpHandler.class);
     queryRequestCaptor = ArgumentCaptor.forClass(SolrQueryRequest.class);
 
-    when(infoHandler.getSystemInfoHandler()).thenReturn(mockSystemInfoHandler);
     when(infoHandler.getLoggingHandler()).thenReturn(mockLoggingHandler);
     when(infoHandler.getPropertiesHandler()).thenReturn(mockPropertiesHandler);
-    when(infoHandler.getHealthCheckHandler()).thenReturn(mockHealthCheckHandler);
     when(infoHandler.getThreadDumpHandler()).thenReturn(mockThreadDumpHandler);
 
     apiBag = new ApiBag(false);
@@ -147,48 +137,15 @@ public class V2NodeAPIMappingTest extends SolrTestCaseJ4 {
     assertEquals("anyParamValue", v1Params.get("anyParamName"));
   }
 
-  @Test
-  public void testSystemInfoApiAllProperties() throws Exception {
-    final ModifiableSolrParams solrParams = new ModifiableSolrParams();
-    solrParams.add("anyParamName", "anyParamValue");
-    final SolrParams v1Params = captureConvertedSystemV1Params("/node/system", "GET", solrParams);
-
-    // All parameters are passed through to v1 API as-is.
-    assertEquals("anyParamValue", v1Params.get("anyParamName"));
-  }
-
-  @Test
-  public void testHealthCheckApiAllProperties() throws Exception {
-    final ModifiableSolrParams solrParams = new ModifiableSolrParams();
-    solrParams.add("requireHealthyCores", "true");
-    solrParams.add("maxGenerationLag", "123");
-    final SolrParams v1Params =
-        captureConvertedHealthCheckV1Params("/node/health", "GET", solrParams);
-
-    // All parameters are passed through to v1 API as-is.
-    assertEquals(true, v1Params.getBool("requireHealthyCores"));
-    assertEquals(123, v1Params.getPrimitiveInt("maxGenerationLag"));
-  }
-
   private SolrParams captureConvertedCoreV1Params(String path, String method, String v2RequestBody)
       throws Exception {
     return doCaptureParams(
         path, method, new ModifiableSolrParams(), v2RequestBody, mockCoresHandler);
   }
 
-  private SolrParams captureConvertedSystemV1Params(
-      String path, String method, SolrParams inputParams) throws Exception {
-    return doCaptureParams(path, method, inputParams, null, mockSystemInfoHandler);
-  }
-
   private SolrParams captureConvertedPropertiesV1Params(
       String path, String method, SolrParams inputParams) throws Exception {
     return doCaptureParams(path, method, inputParams, null, mockPropertiesHandler);
-  }
-
-  private SolrParams captureConvertedHealthCheckV1Params(
-      String path, String method, SolrParams inputParams) throws Exception {
-    return doCaptureParams(path, method, inputParams, null, mockHealthCheckHandler);
   }
 
   private SolrParams captureConvertedThreadDumpV1Params(
@@ -204,31 +161,21 @@ public class V2NodeAPIMappingTest extends SolrTestCaseJ4 {
       RequestHandlerBase mockHandler)
       throws Exception {
     final HashMap<String, String> parts = new HashMap<>();
-    final Map<String, String[]> inputParamsMap = new HashMap<>();
+    ModifiableSolrParams solrParams = new ModifiableSolrParams();
     inputParams.stream()
         .forEach(
             e -> {
-              inputParamsMap.put(e.getKey(), e.getValue());
+              solrParams.add(e.getKey(), e.getValue());
             });
     final Api api = apiBag.lookup(path, method, parts);
     final SolrQueryResponse rsp = new SolrQueryResponse();
-    final LocalSolrQueryRequest req =
-        new LocalSolrQueryRequest(null, inputParamsMap) {
+    final SolrQueryRequestBase req =
+        new SolrQueryRequestBase(null, solrParams) {
           @Override
           public List<CommandOperation> getCommands(boolean validateInput) {
-            if (v2RequestBody == null) return Collections.emptyList();
+            if (v2RequestBody == null) return List.of();
             return ApiBag.getCommandOperations(
                 new ContentStreamBase.StringStream(v2RequestBody), api.getCommandSchema(), true);
-          }
-
-          @Override
-          public Map<String, String> getPathTemplateValues() {
-            return parts;
-          }
-
-          @Override
-          public String getHttpMethod() {
-            return method;
           }
         };
 
@@ -243,7 +190,5 @@ public class V2NodeAPIMappingTest extends SolrTestCaseJ4 {
     apiBag.registerObject(new RejoinLeaderElectionAPI(coreHandler));
     apiBag.registerObject(new NodePropertiesAPI(infoHandler.getPropertiesHandler()));
     apiBag.registerObject(new NodeThreadsAPI(infoHandler.getThreadDumpHandler()));
-    apiBag.registerObject(new NodeSystemInfoAPI(infoHandler.getSystemInfoHandler()));
-    apiBag.registerObject(new NodeHealthAPI(infoHandler.getHealthCheckHandler()));
   }
 }
